# Integriti

./: .env.example  .gitignore  DEVELOPMENT_STATUS.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_STRUCTURE.md  PROMPTS_GUIDE.md  README.md  ROADMAP.md  TECHNICAL_SPECS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: start_dev.sh  test_api.sh
src/: main.py
src/api/: Dockerfile
src/core/config/: settings.py
